--- a/config/database.yml
+++ b/config/database.yml
@@ -1,28 +1,27 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  host: localhost
   pool: 5
   timeout: 5000
+  template: template0
+  username: ubuntu
+  password: ubuntu
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: db/pg_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
   <<: *default
-  database: db/test.sqlite3
+  database: db/pg_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: db/pg_production
 
 cucumber:
   <<: *test
